--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,7 +8,6 @@ path:
     res : "/root/project4/data/eTPSS/res.txt"
 #    data: "data/data.txt"
 #    res: "data/res.txt"
-#path:
 #  distributed:
 #    drs:
 #      cmd: ""
@@ -18,11 +17,12 @@ path:
 #      cmd: ""
 #      data: ""
 #      res: ""
-#  notDistributed:
-#    range_search:
-#      cmd: ""
-#      data : ""
-#      res : ""
+  notDistributed:
+    range_search:
+      cmd: "/root/project4/c/range_search/build/range_search"
+      data : "/root/project4/data/range_search/data.txt"
+      queryFile : "/root/project4/data/range_search/query.txt"
+      res : "/root/project4/data/range_search/res.txt"
 #    rsq:
 #      cmd: ""
 #      data: ""
@@ -44,8 +44,8 @@ port:
 
   notDistributed:
     range_search:
-      port: ""
-      address: "localhost"
+      port: "9990"
+      address: "10.170.53.52"
 
 spring:
   servlet:
@@ -73,3 +73,4 @@ swagger:
 logging:
   level:
     root: INFO
+cmd: "/root/project4/c/range_search/build/range_search"
