--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,4 @@ mybatis:
   type-aliases-package: com.xd.hufei.dto
   configuration:
     map-underscore-to-camel-case: true
+isPrivacyActivated: false
