--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -60,13 +60,13 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
-      url: jdbc:mysql://10.10.55.25:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
+      url: jdbc:mysql://10.10.55.25:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=Asia/Shanghai
       username: root
-      password: T3stP@ssw0rd!
+      password: 011013
       initialSize: 5
       minIdle: 5
       maxActive: 50
-      maxWait: 60000
+      maxWait: 600000
       timeBetweenEvictionRunsMillis: 60000
   mvc:
     pathmatch:
