更新SKQ查询的内容

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,7 @@ server:
   servlet:
     session:
       timeout: 30m
+      cookie:
+        http-only: false
+        same-site: none
+        secure: true
